src/objects/TR1__MassResumeProcessor__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>TR1__Concurrent_Resume_Upload_Limit__c</fullName>
        <label>Concurrent Resume Upload Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__DeleteProcessedFiles__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete Processed Files (Depreciated)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Email_Notifications_on_Upload_Success__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Notifications on Upload Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Mass_Upload_Filename_Qualifiers__c</fullName>
        <label>Mass Upload Filename Qualifiers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Mass Resume Processor</label>
</CustomObject>